// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Component render 1`] = `
<div
  className="container"
>
  <div
    className="iconContainer inputIconContainer"
  >
    <img
      src="http://yolo.com/icon.png"
    />
  </div>
  <div
    className="inputWrapper"
    style={Object {}}
  >
    <input
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="input inputHasIcon"
      disabled={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder={undefined}
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`Search Component render value 1`] = `
<div
  className="container"
>
  <button
    className="iconContainer clearableIconContainer"
    onClick={[Function]}
  >
    <img
      src="http://yolo.com/icon.png"
    />
  </button>
  <div
    className="inputWrapper"
    style={Object {}}
  >
    <input
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="input inputHasClearIcon"
      disabled={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder={undefined}
      role="combobox"
      value="test"
    />
  </div>
</div>
`;
